INFRA/kustomize/locust/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: locust
spec:
  replicas: 1
  selector:
    matchLabels:
      app: locust
  template:
    metadata:
      labels:
        app: locust
    spec:
      containers:
      - name: locust
        image: locustio/locust
        ports:
        - containerPort: 8089
        volumeMounts:
        - name: locust-script
          mountPath: /mnt/locust
      volumes:
      - name: locust-script
        configMap:
          name: locust-script
