INFRA/kustomize/locust/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: locust
spec:
  type: ClusterIP
  ports:
  - port: 8089
    targetPort: 8089
  selector:
    app: locust
